# BullStockOps

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yaml
src/be/app/: config.py
tests/be/app/: test_config.py
