[project]
name = "bullstockops"
version = "0.1.0"
description = "AI-powered FinTech Platform for Smarter Trading Operations"
authors = [{name = "Gleb Lukicov"}]
readme = "README.md"
requires-python = "<3.14.0,>=3.13.0"
dependencies = []
license = "MIT"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]

[project.scripts]
bullstockops_be = "src.be.app:main"

[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/be/app"]

[tool.uv]
package = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_missing_imports = true

[tool.ruff]
target-version = 'py313'
line-length = 120
lint.select = [
    "F", # Pyflakes
    "E", "W", # Pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "PTH", # flake8-use-pathlib
    "PD", # pandas-vet
    "TRY", # tryceratops
]

lint.ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F403", "F401", "UP035"]

[tool.pytest.ini_options]
pythonpath = ["be.bullstockops"]
filterwarnings = [
    "ignore::DeprecationWarning",
    'ignore:setDaemon() is deprecated, set the daemon attribute instead:DeprecationWarning',
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
omit = ["*/**/__init__.py",
    "tests/**/*.py"
]
